--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "repository": "https://github.com/giangm9/three-depthtexture-buffer.git",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.1"
+    "@types/express": "^4.17.13",
+    "@types/three": "^0.144.0",
+    "esbuild": "^0.15.7",
+    "express": "^4.18.1",
+    "three": "^0.144.0"
   }
 }
